# evotianusx.github.io

./: astro.config.mjs  combined_output.txt  compiled_articles.md  concat_all.py  flutter_service_worker.js  index.html  input.txt  main.dart.js  main.dart.js.map  main.py  otp.py  package-lock.json  package.json  readme_bus.md  svelte.config.js  tailwind.config.cjs  tsconfig.json  version.json
.github/workflows/: deploy.yml
LED-LDR-Button-HFT/: LED-LDR-Button-HFT.ino  main.py  readme.md  wiring.md
assets/: NOTICES
src/: tailwind.css
src/assets/: berry.json
src/components/: Button.svelte  Counter.svelte  Fertilizer.svelte  Folder.svelte  Severance.svelte  Splitter.svelte  WorkingHours.svelte  fertilizer.json
src/components/bus-game/: Controls.svelte  Game.svelte  RouteList.svelte  StationQueues.svelte
src/content/docs/: index.mdx  intro.mdx  resume.mdx
src/content/docs/guides/: using-jules-for-resume.mdx
src/content/docs/projects/: astro.md  home.md
src/content/docs/projects/Astro/: folder.md  guide.md  sveltereact.md
src/content/docs/projects/Fertilizer-Calculator/: index.md
src/content/docs/projects/Hardware/: arduino-rng.mdx
src/content/docs/projects/Learning History/: 2024-10.mdx  2024.mdx  2025-01.mdx  2025.mdx  linkedin-scraping-adventures.md  otel-jaeger-fastapi.md  personal-chat.md
src/content/docs/projects/MCP/code/: command.md  main.py  mcp2.py  pyproject.toml
src/content/docs/tools/: home.md  split.mdx
src/pages/: bus-game.astro  chat.astro  fertilizer.astro  folder.astro  hours.astro  severance.astro  split.astro
(+8 files in other folders)
